--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="./images/Pigrwlp.ico" type="image/x-icon"
+    <link rel="icon" href="./images/Pigrwlp.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/ba57058827.js" crossorigin="anonymous"></script>
     <title>Harrison Atherton</title>
 </head>
@@ -73,7 +73,7 @@
                     <p class="description">
                         General Manager <br>
                         Domino's <br>
-                        3578 St Rose Pkwy Ste 104 Ste 104 <br>
+                        3578 St Rose Pkwy Ste 104<br>
                         Las Vegas, NV 89052 <br>
                         (702) 480-2170 <br> 
                         email@email.com <br><br>
