--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="./images/Pigrwlp.ico" type="image/x-icon">
+    <link rel="icon" href="./images/logo.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/ba57058827.js" crossorigin="anonymous"></script>
     <title>Harrison Atherton</title>
 </head>
+
 <body>
     <section id="up"></section>
     <section id="down"></section>
@@ -50,11 +51,24 @@
                         leveraging my technical skills and analytical expertise to build and maintain
                         scalable data infrastructures.
                     </p>
-                    <a class="downloadBtn" a href="./cv.pdf" download="Resume.pdf">Resume</a>
                 </div>
             </div>
         </div>
-    
+        <!-- Top side -->
+        <div class="group-0">
+            <div class="portfolio_item">
+                <a href="./cv.pdf" download class="portfolio_item">
+                    <i data-feather="download"></i>
+                    <span>Resume</span>
+                </a>
+            </div>
+            <div class="portfolio_item">
+                <a href="#" class="portfolio_item">
+                    <i data-feather="bar-chart-2"></i>
+                    <span>Portfolio</span>
+                </a>
+            </div>
+        </div>
         <!-- Left side -->
         <div class="group-1">
             <div class="skills">
@@ -75,7 +89,7 @@
                         Domino's <br>
                         3578 St Rose Pkwy Ste 104<br>
                         Las Vegas, NV 89052 <br>
-                        (702) 480-2170 <br> 
+                        (702) 480-2170 <br>
                         email@email.com <br><br>
                         Precious Webster was my general manager at Domino's while I pursued
                         my degree at UNLV.
@@ -88,7 +102,7 @@
                         General Manager <br>
                         Shell <br>
                         Norco, CA 92860 (Location no longer active) <br>
-                        (951) 809-6013 <br> 
+                        (951) 809-6013 <br>
                         email@email.com <br><br>
 
                         Hoa Nguyen was my manager and mentor at my first job in California.
@@ -108,7 +122,7 @@
                     </p>
                 </div>
             </div>
-    
+
             <div class="certification">
                 <h3 class="title">Certification</h3>
                 <div class="certification_item">
@@ -179,4 +193,5 @@
 Special thanks to @webcifar & @mattnewdavid for guiding me through my first HTML/CSS website!
 (If you're reading this please hire me 📊)
 -->
+
 </html>
