--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!-- Top side -->
         <div class="group-0">
             <div class="portfolio_item">
-                <a href="cv.pdf" class="portfolio_item">
+                <a href="#" class="portfolio_item">
                     <i data-feather="download"></i>
                     <span>Resume</span>
                 </a>
