--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="./images/logo.ico" type="image/x-icon">
+    <link rel="icon" href="./images/Pigrwlp.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/ba57058827.js" crossorigin="anonymous"></script>
     <title>Harrison Atherton</title>
 </head>
@@ -51,24 +51,11 @@
                         leveraging my technical skills and analytical expertise to build and maintain
                         scalable data infrastructures.
                     </p>
+                    <a class="downloadBtn" a href="./cv.pdf" download="Resume.pdf">Resume</a>
                 </div>
             </div>
         </div>
-        <!-- Top side -->
-        <div class="group-0">
-            <div class="portfolio_item">
-                <a href="#" class="portfolio_item">
-                    <i data-feather="download"></i>
-                    <span>Resume</span>
-                </a>
-            </div>
-            <div class="portfolio_item">
-                <a href="#" class="portfolio_item">
-                    <i data-feather="bar-chart-2"></i>
-                    <span>Portfolio</span>
-                </a>
-            </div>
-        </div>
+
         <!-- Left side -->
         <div class="group-1">
             <div class="skills">
