--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div>
                     <h1 class="profile_name">
-                        <span class="profile_name_firstName">Harrison </span>
+                        <span class="profile_name_firstName">Harrison</span>
                         <span class="profile_name_lastName">Atherton</span>
                     </h1>
                     <p class="profile_title">Data Analyst</p>
@@ -63,7 +63,7 @@
                 </a>
             </div>
             <div class="portfolio_item">
-                <a href="#" class="portfolio_item">
+                <a href="./portfolio.html" class="portfolio_item">
                     <i data-feather="bar-chart-2"></i>
                     <span>Portfolio</span>
                 </a>
