--- a/index.html
+++ b/index.html
@@ -34,6 +34,22 @@
     <section id="left"></section>
     <section id="right"></section>
     <div class="container">
+    <!-- Top side -->
+    <div class="group-0">
+        <div class="portfolio_item">
+            <a href="./portfolio.html" class="portfolio_item">
+                <i data-feather="bar-chart-2"></i>
+                <span>Portfolio</span>
+            </a>
+        </div>
+        <div class="portfolio_item">
+            <a href="cv.pdf" download class="portfolio_item">
+                <i data-feather="download"></i>
+                <span>Resume</span>
+            </a>
+        </div>
+    </div>
+    <!-- Header -->
         <div class="profile">
             <div class="profile_container">
                 <div class="profile_profileImg">
@@ -54,21 +70,7 @@
                 </div>
             </div>
         </div>
-        <!-- Top side -->
-        <div class="group-0">
-            <div class="portfolio_item">
-                <a href="cv.pdf" download class="portfolio_item">
-                    <i data-feather="download"></i>
-                    <span>Resume</span>
-                </a>
-            </div>
-            <div class="portfolio_item">
-                <a href="./portfolio.html" class="portfolio_item">
-                    <i data-feather="bar-chart-2"></i>
-                    <span>Portfolio</span>
-                </a>
-            </div>
-        </div>
+
         <!-- Left side -->
         <div class="group-1">
             <div class="skills">
