--- a/index.html
+++ b/index.html
@@ -186,6 +186,10 @@
                         <i data-feather="linkedin"></i>
                         <span>/athertonh</span>
                     </a>
+                    <a href="https://leetcode.com/u/athertonh/" class="social_item">
+                        <i data-feather="code"></i>
+                        <span>/athertonh</span>
+                    </a>
                 </div>
             </div>
         </div>
