--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
                 <h3 class="title">Python (Pandas)</h3>
                 <ul class="skill_list description">
                     <a href="./weather.html" class="portfolio_item">
-                        <i data-feather="code"></i>
+                        <img src="./images/pythonPandas.ico" class="icon">
                         <span>Weather</span>
                     </a>
                 </ul>
@@ -94,6 +94,10 @@
                     </a>
                     <a href="https://www.linkedin.com/in/athertonh/" class="social_item">
                         <i data-feather="linkedin"></i>
+                        <span>/athertonh</span>
+                    </a>
+                    <a href="https://leetcode.com/u/athertonh/" class="social_item">
+                        <i data-feather="code"></i>
                         <span>/athertonh</span>
                     </a>
                 </div>
