--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Top side -->
     <div class="group-0">
         <div class="portfolio_item">
-            <a href="./portfolio.html" class="portfolio_item">
+            <a href="./portfolio" class="portfolio_item">
                 <i data-feather="bar-chart-2"></i>
                 <span>Portfolio</span>
             </a>
