--- a/portfolio.html
+++ b/portfolio.html
@@ -36,9 +36,9 @@
     <div class="container">
         <!-- Top side -->
         <div class="group-0">
-        <div class="group-0">
+            
             <div class="portfolio_item">
-                <a href="./index.html" class="portfolio_item">
+                <a href="./" class="portfolio_item">
                     <i data-feather="home"></i>
                     <span>Home</span>
                 </a>
@@ -49,7 +49,6 @@
                     <span>Resume</span>
                 </a>
             </div>
-        </div>
         </div>
         <!-- Left side -->
         <div class="group-1">
